--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.2.1",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
+    "react-contentful": "^2.0.11",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
