--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
 	"scripts": {
 		"build:css": "postcss src/tailwind.css -o src/index.css",
 		"watch:css": "postcss src/tailwind.css -o src/index.css -w",
-		"start": "npm run build:css && react-scripts start",
-		"build": "npm run build:css && react-scripts build",
+		"react-start": "react-scripts start",
+		"react-build": "react-scripts build",
+		"start": "run-p watch:css react-start",
+		"build": "npm-run-all build:css react-build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
@@ -39,6 +41,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^9.8.0",
+		"npm-run-all": "^4.1.5",
 		"postcss-cli": "^7.1.1",
 		"prettier": "2.0.5"
 	}
