--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/core": "^10.0.28",
+		"@emotion/styled": "^10.0.27",
 		"@material-ui/core": "^4.10.2",
 		"@material-ui/icons": "^4.9.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"clsx": "^1.1.1",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.19",
 		"react": "^16.13.1",
+		"react-anchor-link-smooth-scroll": "^1.0.12",
+		"react-burger-menu": "^2.6.11",
 		"react-contentful": "^2.0.11",
 		"react-dom": "^16.13.1",
+		"react-headroom": "^3.0.0",
+		"react-icons": "^3.10.0",
+		"react-reveal": "^1.2.2",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1",
-		"tailwindcss": "^1.4.6"
+		"react-scripts": "^3.4.3",
+		"tailwindcss": "^1.4.6",
+		"twin.macro": "^1.7.0"
 	},
 	"scripts": {
 		"build:css": "postcss src/tailwind.css -o src/index.css",
