--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@
 .DS_Store
 .env.local
 .env.development.local
+.env.development
 .env.test.local
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
@@ -28,3 +30,4 @@ Ignor*
 
 #taiwind automatic styles generated
 src/index.css
+
